deploy/cicd/tekton/2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: "2"
  name: "2"
spec:
  rules:
    - host: 2.com
      http:
        paths:
          - backend:
              service:
                name: el-2-git-repo
                port:
                  name: port-8080
            path: /el-2-git-repo
            pathType: Prefix
status:
  loadBalancer: {}
